--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vue-step-wizard": "^0.1.17",
     "vuetify": "^2.1.11"
   },
   "devDependencies": {
