--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
+    "vue-image-upload-resize": "^2.3.0",
     "vue-router": "^3.1.3",
     "vue-step-wizard": "^0.1.17",
     "vuetify": "^2.1.11",
