--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue-image-upload-resize": "^2.3.0",
     "vue-router": "^3.1.3",
     "vue-step-wizard": "^0.1.17",
+    "vue-upload-multiple-image": "^1.1.6",
     "vuetify": "^2.1.11",
     "vuex": "^3.6.2"
   },
