--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.6.10",
     "vue-apollo": "^3.0.0-beta.11",
     "vue-image-upload-resize": "^2.3.0",
+    "vue-picture-input": "^2.1.6",
     "vue-router": "^3.1.3",
     "vue-step-wizard": "^0.1.17",
     "vue-upload-multiple-image": "^1.1.6",
